--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import "./utils/variables";
+@import "./utils/mixins";
 @import "./base/typography";
 @import "./layout/header";
+@import "./layout/footer";
 @import "./pages/home";
