--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -17,8 +17,11 @@
     text-align: center;
     padding: 15px;
     color: $verydark-grey;
+    &__icon {
+        position: absolute;
+        left: 28%;
+    }
     &__city {
-        padding-left: 22px;
         font-size: 16px;
         font-weight: 500;
     }
