--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,11 +3,19 @@
     padding-bottom: 10px;
     padding-top: 20px;
     justify-content: center;
-    box-shadow: 0px 0px 5px 1.2px darkgrey;
-    position: relative;
-    z-index: 2;
+    &--home {
+        box-shadow: 0px 0px 5px 1.2px darkgrey;
+        position: relative;
+        z-index: 2;
+    }
     &__img {
         width: 165px;
+    }
+    &__icon {
+        color: $verydark-grey;
+        font-size: 20px;
+        position: absolute;
+        left: 5%;
     }
 }
 .loc {
