--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -16,20 +16,8 @@
         color: $verydark-grey;
     }
     &__button {
-        padding: 15px 0;
-        background: linear-gradient(175deg, $secondary-color -20%, $primary-color 100%);
-        border-radius: 30px;
+        @include button();
         margin: 30px 60px;
-        color: white;
-        font-weight: 500;
-        box-shadow: 0px 2px 10px 1.2px darkgrey;
-        transition: all 0.3s ease 0s;
-        &:hover, &:active {
-            background: transparent;
-            outline: 2px solid $secondary-color;
-            color: $primary-color;
-            box-sizing: border-box;
-        }
     }
 }
 .function {
