--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -2,3 +2,18 @@
     font-family: 'Shrikhand', cursive;
     font-weight: 400;
 }
+@mixin button {
+    padding: 15px 0;
+    background: linear-gradient(175deg, $secondary-color -20%, $primary-color 100%);
+    border-radius: 30px;
+    color: white;
+    font-weight: 500;
+    box-shadow: 0px 2px 10px 1.2px darkgrey;
+    transition: all 0.3s ease 0s;
+    &:hover, &:active {
+        background: transparent;
+        outline: 2px solid $secondary-color;
+        color: $primary-color;
+        box-sizing: border-box;
+    }
+}
