--- a/public/css/style.css
+++ b/public/css/style.css
@@ -99,7 +99,7 @@ p {
 .menu__container {
   display: flex;
   flex-flow: column nowrap;
-  border-radius: 40px;
+  border-radius: 40px 40px 0 0;
   padding: 35px 15px;
   padding-bottom: 60px;
   background: #F6F6F6;
@@ -161,6 +161,7 @@ p {
   margin-right: 20px;
   stroke: black;
   stroke-width: 10;
+  cursor: pointer;
 }
 .menu__subtitle h3 {
   font-weight: 300;
@@ -174,6 +175,8 @@ p {
   border-bottom: 1px;
 }
 .menu__button {
+  position: relative;
+  z-index: 1;
   padding: 15px 0;
   background: linear-gradient(175deg, #FF79DA -20%, #9356DC 100%);
   border-radius: 30px;
@@ -181,14 +184,31 @@ p {
   font-weight: 500;
   box-shadow: 0px 2px 10px 1.2px darkgrey;
   transition: all 0.3s ease 0s;
+  cursor: pointer;
   border: none;
   margin: 25px 75px;
 }
 .menu__button:hover, .menu__button:active {
-  background: transparent;
-  outline: 2px solid #FF79DA;
-  color: #9356DC;
-  box-sizing: border-box;
+  border-radius: 30px;
+}
+.menu__button:hover::after, .menu__button:active::after {
+  opacity: 1;
+  border-radius: 30px;
+}
+.menu__button::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: linear-gradient(175deg, #fface8 -20%, #ae80e5 100%);
+  opacity: 0;
+  z-index: -1;
+  transition: opacity 250ms;
+  border-radius: 30px;
+  box-shadow: 0px 2px 10px 2px darkgrey;
+  cursor: pointer;
 }
 
 .intro {
@@ -210,6 +230,8 @@ p {
   color: #353535;
 }
 .intro__button {
+  position: relative;
+  z-index: 1;
   padding: 15px 0;
   background: linear-gradient(175deg, #FF79DA -20%, #9356DC 100%);
   border-radius: 30px;
@@ -217,13 +239,30 @@ p {
   font-weight: 500;
   box-shadow: 0px 2px 10px 1.2px darkgrey;
   transition: all 0.3s ease 0s;
+  cursor: pointer;
   margin: 30px 60px;
 }
 .intro__button:hover, .intro__button:active {
-  background: transparent;
-  outline: 2px solid #FF79DA;
-  color: #9356DC;
-  box-sizing: border-box;
+  border-radius: 30px;
+}
+.intro__button:hover::after, .intro__button:active::after {
+  opacity: 1;
+  border-radius: 30px;
+}
+.intro__button::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: linear-gradient(175deg, #fface8 -20%, #ae80e5 100%);
+  opacity: 0;
+  z-index: -1;
+  transition: opacity 250ms;
+  border-radius: 30px;
+  box-shadow: 0px 2px 10px 2px darkgrey;
+  cursor: pointer;
 }
 
 .function {
@@ -256,6 +295,12 @@ p {
   margin: 25px 0;
   cursor: pointer;
   transition: all 0.2s ease 0s;
+  position: relative;
+  z-index: 1;
+}
+.function__list li i {
+  position: relative;
+  z-index: 1;
 }
 .function__list li::before {
   content: counter(li);
@@ -270,10 +315,27 @@ p {
   margin-left: -32px;
 }
 .function__list li:hover, .function__list li:active {
-  background-color: #f5edff;
+  border-radius: 20px;
+}
+.function__list li:hover::after, .function__list li:active::after {
+  opacity: 1;
+  border-radius: 20px;
 }
 .function__list li:hover i, .function__list li:active i {
   color: #9356DC;
+}
+.function__list li::after {
+  background-color: #f5edff;
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  opacity: 0;
+  z-index: -1;
+  transition: opacity 250ms;
+  border-radius: 20px;
 }
 .function__list i {
   display: inherit;
@@ -357,6 +419,7 @@ p {
   stroke-width: 10;
   right: 10%;
   margin-top: 205px;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=style.css.map */
