--- a/sass/layout/_restaurant.scss
+++ b/sass/layout/_restaurant.scss
@@ -17,7 +17,7 @@
     &__container {
         display: flex;
         flex-flow: column nowrap;
-        border-radius: 40px;
+        border-radius: 40px 40px 0 0;
         padding: 35px 15px;
         padding-bottom: 60px;
         background: $grey;
@@ -78,6 +78,7 @@
         margin-right: 20px;
         stroke: black;
         stroke-width: 10;
+        cursor: pointer;
     }
     &__subtitle {
         h3 {
