--- a/public/css/style.css
+++ b/public/css/style.css
@@ -211,6 +211,100 @@ p {
   cursor: pointer;
 }
 
+.loader {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  position: fixed;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  padding-top: 80%;
+  background: white;
+  animation: loader 2.6s 500ms forwards;
+}
+
+.fork {
+  width: 50px;
+  transform: rotate(-45deg) translateX(-100px);
+  animation: fork 2s 500ms forwards;
+}
+
+.knife {
+  width: 50px;
+  transform: rotate(45deg) translateX(100px);
+  animation: knife 2s 500ms forwards;
+}
+
+.plate {
+  width: 50px;
+  transform: translateY(1000px);
+  animation: plate 2s 500ms forwards;
+}
+
+.table-set {
+  display: flex;
+  justify-content: center;
+  border-radius: 25px;
+  background-color: #F6F6F6;
+  opacity: 0;
+  height: 80px;
+  animation: table-set 2.6s 500ms forwards;
+}
+
+@keyframes table-set {
+  70% {
+    opacity: 1;
+  }
+  85% {
+    transform: translateY(0px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(-1000px);
+  }
+}
+@keyframes plate {
+  to {
+    transform: translateY(0px);
+  }
+}
+@keyframes knife {
+  50% {
+    transform: translateY(-50px);
+  }
+  90% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: translate(0px, 0px) rotate(-10deg);
+    fill: #FF79DA;
+  }
+}
+@keyframes fork {
+  50% {
+    transform: translateY(-50px);
+  }
+  90% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: translate(0px, 0px) rotate(10deg);
+    fill: #FF79DA;
+  }
+}
+@keyframes loader {
+  85% {
+    background: rgba(255, 255, 255, 0.8);
+  }
+  99% {
+    transform: scale(1);
+  }
+  100% {
+    transform: translateY(500px) scale(0);
+    background: rgba(255, 255, 255, 0);
+  }
+}
 .intro {
   display: flex;
   flex-flow: column;
