--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,4 +4,5 @@
 @import "./layout/header";
 @import "./layout/footer";
 @import "./layout/restaurant";
+@import "./components/animations";
 @import "./pages/home";
