Rectifications valeurs animation

--- a/sass/layout/_restaurant.scss
+++ b/sass/layout/_restaurant.scss
@@ -38,8 +38,8 @@
             border-radius: 15px;
             padding: 12px 10px;
             box-shadow: 0 3px 10px 0.5px #CECECE;
-            animation: menu__element 400ms 500ms ease-in-out backwards;
-            @for $i from 1 through $entry-number {
+            animation: menu__element 400ms 300ms ease-in-out backwards;
+            @for $i from 1 through $max-entry-number {
                 &--#{$i} {
                     animation-delay: 180ms * $i;
                  }
