--- a/public/css/style.css
+++ b/public/css/style.css
@@ -117,9 +117,10 @@ p {
   gap: 20px;
 }
 .menu__carte__element {
+  display: flex;
+  flex-flow: row nowrap;
   background-color: white;
   border-radius: 15px;
-  padding: 12px 10px;
   box-shadow: 0 3px 10px 0.5px #CECECE;
   animation: menu__element 400ms 300ms ease-in-out backwards;
 }
@@ -152,6 +153,19 @@ p {
 }
 .menu__carte__element--10 {
   animation-delay: 1800ms;
+}
+.menu__carte__element:active .checked, .menu__carte__element:hover .checked {
+  width: 90px;
+}
+.menu__carte__element:active .fa-circle-check, .menu__carte__element:hover .fa-circle-check {
+  animation: menu__checked 350ms ease-in-out both;
+}
+.menu__carte__element__column {
+  display: flex;
+  flex-flow: column nowrap;
+  flex-basis: 100%;
+  padding: 12px 10px;
+  overflow: hidden;
 }
 .menu__carte__element__bottom {
   display: flex;
@@ -240,6 +254,22 @@ p {
   border-radius: 30px;
   box-shadow: 0px 2px 10px 2px darkgrey;
   cursor: pointer;
+}
+
+.checked {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 25px;
+  background: #99E2D0;
+  width: 0;
+  overflow: hidden;
+  border-radius: 0 15px 15px 0;
+  transition: all ease-in-out 350ms;
+}
+.checked i {
+  margin: auto;
 }
 
 .loader {
@@ -344,6 +374,14 @@ p {
   100% {
     transform: translateY(0);
     opacity: 1;
+  }
+}
+@keyframes menu__checked {
+  from {
+    transform: rotate(90deg);
+  }
+  to {
+    transform: rotate(360deg);
   }
 }
 .intro {
