--- a/sass/components/_animations.scss
+++ b/sass/components/_animations.scss
@@ -107,3 +107,12 @@
     opacity: 1;
   }
 }
+
+@keyframes menu__checked {
+  from {
+    transform: rotate(90deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
