--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -11,6 +11,11 @@
     &__img {
         width: 165px;
     }
+    &__a-icon {
+        @include desktop-only {
+            display: none;
+        }
+    }
     &__icon {
         color: $verydark-grey;
         font-size: 20px;
@@ -27,7 +32,7 @@
     color: $verydark-grey;
     &__icon {
         position: absolute;
-        left: 28%;
+        transform: translateX(-75px);
     }
     &__city {
         font-size: 16px;
