--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -36,3 +36,21 @@
         cursor: pointer;
     }
 }
+
+@mixin desktop-only {
+    @media screen and (min-width: map-get($breakpoints, desktop)) {
+        @content;
+    }
+}
+
+@mixin tablet-only {
+    @media screen and (min-width: map-get($breakpoints, tablet-min)) and (max-width: map-get($breakpoints, tablet-max)) {
+        @content;
+    }
+}
+
+@mixin desktop-tablet {
+    @media screen and (min-width: map-get($breakpoints, tablet-min)) {
+        @content;
+    }
+}
