--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,6 +27,11 @@ p {
 .header__img {
   width: 165px;
 }
+@media screen and (min-width: 992px) {
+  .header__a-icon {
+    display: none;
+  }
+}
 .header__icon {
   color: #353535;
   font-size: 20px;
@@ -44,7 +49,7 @@ p {
 }
 .loc__icon {
   position: absolute;
-  left: 28%;
+  transform: translateX(-75px);
 }
 .loc__city {
   font-size: 16px;
@@ -57,6 +62,16 @@ p {
   background-color: #353535;
   color: #F6F6F6;
   padding: 18px;
+}
+@media screen and (min-width: 992px) {
+  .footer {
+    padding: 20px 50px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .footer {
+    padding: 18px 30px;
+  }
 }
 .footer__title {
   font-family: "Shrikhand", cursive;
@@ -96,6 +111,13 @@ p {
 .menu {
   padding-top: 210px;
 }
+@media screen and (min-width: 992px) {
+  .menu {
+    display: flex;
+    justify-content: center;
+    background-size: cover;
+  }
+}
 .menu__container {
   display: flex;
   flex-flow: column nowrap;
@@ -103,6 +125,7 @@ p {
   padding: 35px 15px;
   padding-bottom: 60px;
   background: #F6F6F6;
+  width: 958px;
 }
 .menu__carte {
   display: flex;
@@ -255,6 +278,12 @@ p {
   box-shadow: 0px 2px 10px 2px darkgrey;
   cursor: pointer;
 }
+@media screen and (min-width: 768px) {
+  .menu__button {
+    margin: 30px auto;
+    width: 300px;
+  }
+}
 
 .checked {
   display: flex;
@@ -280,7 +309,6 @@ p {
   z-index: 999;
   width: 100%;
   height: 100%;
-  padding-top: 80%;
   background: white;
   animation: loader 2.6s 500ms forwards;
 }
@@ -306,6 +334,7 @@ p {
 .table-set {
   display: flex;
   justify-content: center;
+  margin: auto 0;
   border-radius: 25px;
   background-color: #F6F6F6;
   opacity: 0;
@@ -384,6 +413,12 @@ p {
     transform: rotate(360deg);
   }
 }
+@media screen and (min-width: 992px) {
+  .introduction {
+    display: flex;
+  }
+}
+
 .intro {
   display: flex;
   flex-flow: column;
@@ -391,6 +426,12 @@ p {
   background-color: #F6F6F6;
   padding: 20px;
   text-align: center;
+}
+@media screen and (min-width: 992px) {
+  .intro {
+    background-color: white;
+    flex-basis: 50%;
+  }
 }
 .intro__title {
   font-weight: 700;
@@ -437,6 +478,12 @@ p {
   box-shadow: 0px 2px 10px 2px darkgrey;
   cursor: pointer;
 }
+@media screen and (min-width: 768px) {
+  .intro__button {
+    margin: 30px auto;
+    width: 300px;
+  }
+}
 
 .function {
   display: flex;
@@ -446,8 +493,23 @@ p {
   padding: 40px 0;
   padding-left: 18px;
 }
+@media screen and (min-width: 992px) {
+  .function {
+    flex-basis: 50%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .function {
+    padding: 40px 30px;
+  }
+}
 .function__title {
   font-size: 21.5px;
+}
+@media screen and (min-width: 992px) {
+  .function__title {
+    margin: auto;
+  }
 }
 .function__list {
   text-align: center;
@@ -531,6 +593,18 @@ p {
   padding: 40px 18px;
   padding-bottom: 70px;
 }
+@media screen and (min-width: 992px) {
+  .restaurants {
+    padding: 100px 50px;
+    padding-top: 40px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .restaurants {
+    padding: 40px 30px;
+    padding-bottom: 100px;
+  }
+}
 .restaurants__title {
   font-size: 21.5px;
   padding-bottom: 5px;
@@ -540,18 +614,45 @@ p {
   flex-flow: inherit;
   gap: 30px;
 }
+@media screen and (min-width: 992px) {
+  .restaurants__container {
+    flex-flow: row wrap;
+    justify-content: space-around;
+    gap: 2.5%;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .restaurants__container {
+    flex-flow: row wrap;
+    justify-content: space-around;
+  }
+}
 
 .restaurant {
   display: inherit;
-  flex-flow: inherit;
+  flex-flow: row;
+  justify-content: right;
   border-radius: 20px;
   width: 100%;
   background-color: white;
   box-shadow: 0 3px 10px 0.5px #CECECE;
 }
+@media screen and (min-width: 992px) {
+  .restaurant {
+    width: 23%;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .restaurant {
+    width: 47%;
+  }
+}
 .restaurant__link {
   cursor: pointer;
   color: black;
+  display: flex;
+  flex-flow: column;
+  align-items: end;
 }
 .restaurant__top {
   height: 70%;
@@ -562,27 +663,37 @@ p {
   color: #008766;
   font-size: 15px;
   padding: 5px 10px;
-  right: 0%;
   z-index: 100;
-  margin: 20px 35px;
+  margin: 20px 20px;
 }
 .restaurant__img {
   width: 100%;
   max-height: 190px;
   object-fit: cover;
   border-radius: 20px 20px 0 0;
+  max-width: 100%;
+  width: 1000px;
+}
+@media screen and (min-width: 768px) {
+  .restaurant__img {
+    min-height: 190px;
+  }
 }
 .restaurant__text {
-  margin: 15px;
+  width: 100%;
 }
 .restaurant__text__title {
   font-size: 18px;
   font-weight: 600;
   padding-bottom: 5px;
+  padding-top: 15px;
+  padding-left: 15px;
 }
 .restaurant__text__subtitle {
   font-size: 17px;
   font-weight: 300;
+  padding-bottom: 15px;
+  padding-left: 15px;
 }
 .restaurant__icon {
   position: absolute;
@@ -590,7 +701,7 @@ p {
   width: 38px;
   stroke: black;
   stroke-width: 10;
-  right: 10%;
+  margin-right: 15px;
   margin-top: 205px;
   cursor: pointer;
 }
