--- a/sass/components/_animations.scss
+++ b/sass/components/_animations.scss
@@ -6,7 +6,6 @@
     z-index: 999;
     width: 100%;
     height: 100%;
-    padding-top: 80%;
     background: rgba($color: #FFF, $alpha: 1);
     animation: loader 2.6s 500ms forwards;
   }
@@ -32,6 +31,7 @@
   .table-set {
     display: flex;
     justify-content: center;
+    margin: auto 0;
     border-radius: 25px;
     background-color: $grey;
     opacity: 0;
