--- a/sass/layout/_restaurant.scss
+++ b/sass/layout/_restaurant.scss
@@ -26,7 +26,9 @@
         padding: 35px 15px;
         padding-bottom: 60px;
         background: $grey;
-        width: 958px;
+        @include desktop-only {
+            width: 958px;
+        }
     }
     &__carte {
         display: flex;
@@ -46,6 +48,7 @@
             border-radius: 15px;
             box-shadow: 0 3px 10px 0.5px #CECECE;
             animation: menu__element 400ms 300ms ease-in-out backwards;
+            cursor: pointer;
             @for $i from 1 through $max-entry-number {
                 &--#{$i} {
                     animation-delay: 180ms * $i;
