--- a/sass/layout/_restaurant.scss
+++ b/sass/layout/_restaurant.scss
@@ -1,19 +1,19 @@
 .background {
     &--lapalettedugout {
-        background: url("../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg") no-repeat top/100%;
+        background: url("../../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg") no-repeat top/100%;
     }
     &--lanoteenchantee {
-        background: url("../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg") no-repeat top/100%;
+        background: url("../../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg") no-repeat top/100%;
     }
     &--alafrancaise {
-        background: url("../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg") no-repeat top/100%;
+        background: url("../../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg") no-repeat top/100%;
     }
     &--ledelicedessens {
-        background: url("../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg") no-repeat top/100%;
+        background: url("../../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg") no-repeat top/100%;
     }
 }
 .menu {
-    padding-top: 210px;
+    padding-top: 200px;
     @include desktop-only {
         display: flex;
         justify-content: center;
