--- a/sass/layout/_restaurant.scss
+++ b/sass/layout/_restaurant.scss
@@ -90,6 +90,9 @@
             h2 {
                 font-size: 18.5px;
                 font-weight: 500;
+                text-overflow: ellipsis;
+                overflow: hidden;
+                white-space: nowrap;
             }
         }
     }
@@ -104,12 +107,10 @@
             @include title();
             font-size: 28px;
         }
-    }
-    &__icon {
-        margin-right: 20px;
-        stroke: black;
-        stroke-width: 10;
-        cursor: pointer;
+        i {
+            margin-right: 20px;
+            @include heart;
+        }
     }
     &__subtitle {
         h3 {
