Rectifications des derniers bugs

--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -28,6 +28,9 @@
         }
         a {
             color: $grey;
+            &:hover  {
+                border-bottom: 1.5px solid $dark-grey;
+            }
         }
     }
 }
