--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -174,6 +174,10 @@
     @include tablet-only {
         width: 47%;
     }
+    &:hover {
+        transform: scale(1.01);
+        transition: transform .1s ease;
+    }
     &__link {
         cursor: pointer;
         color: black;
@@ -222,8 +226,8 @@
     }
     &__icon {
         position: absolute;
-        width: 38px;
-        height: 38px;
+        width: 30px;
+        height: 30px;
         z-index: 100;
         margin-right: 18px;
         margin-top: 210px;
